feat: 增强回收站操作，新增TrashDAO和TrashOperation相关方法，重构文件持久化逻辑